Fixed spacing

--- a/css/_layout.css
+++ b/css/_layout.css
@@ -18,10 +18,9 @@ section .bacContent {
   margin: 30px 0 60px 0;
 }
 
-section .homeContent,
 section .aboutContent {
   background-color: white;
-  padding: 60px 40px;
+  padding: 40px;
 }
 
 .aboutDescription,
